# foundation_model

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CLEANUP_FINAL.md  AUTOENCODER_FIXES.md  CHANGES.md  DOCUMENTATION_INDEX.md  OPTIMIZATION_ALGORITHM_CORE.md  OPTIMIZATION_IMPROVEMENTS.md  PLAN_inverse_design_integration.md  README.md  README_OPTIMIZATION_CORE.md  REFACTOR_composition_datamodule_PLAN.md  SIMPLIFIED_ARCHITECTURE_CLEANUP.md  SUMMARY.md  UNIFIED_TANH_ARCHITECTURE.md  Untitled.ipynb  auto_encoder.ipynb  auto_encoder.py  changes.md  compare_input_vs_latent.py  compare_to_ICSD.ipynb  diagnostic_prediction_flow.py  diagnostic_report.txt  grid_params_1.sh  grid_params_2.sh  grid_params_3.sh  grid_search.sh  multi_task.ipynb  multi_task.py  multi_task_lightning.py  multi_task_res_net.py  multi_task_run.ipynb  multi_task_run.py  multi_task_splitter.py  plot_utils.py  predict_ac_stable.ipynb  pyproject.toml  run_continual_rehearsal_demo.sh  run_continual_rehearsal_full.sh  (+27 more)
.claude/skills/fm-eval-ws-ft/: SKILL.md
.claude/skills/fm-inverse/: SKILL.md
.claude/skills/fm-pretrain/: SKILL.md
.claude/skills/hpc-training-env/: SKILL.md
.claude/skills/results-viewer-html/: SKILL.md
.github/instructions/: rikyu-supercomputer.instructions.md
configs/model_configs/: base_model.yaml
data/scripts/: DOS_smoothing.ipynb  calculate_compositional_desc.ipynb  calculate_kmd_descriptors.ipynb  nemad_magnetic.py  nemad_magnetic_test.py  phonix-db.ipynb  process_ac_qe_te_data.ipynb  process_radonpy_data.ipynb
docs/: configuration.md  continual_rehearsal_full_PLAN.md  inverse_design_algorithms.md  inverse_design_extension_notes.md  kmd_descriptor_guide.md  qc_inverse_design_summary.md  trajectory_integration.md
docs/figures/: inverse_design_algorithms_overview.py
docs/refactor_fm_cli/: 00_OVERVIEW.md  01_pr1_task_catalog_and_recording.md  02_pr2_pretrain.md  03_pr3_finetune.md  04_pr4_inverse.md  05_pr5_predict.md  06_pr6_cleanup.md
examples/: minimal_latent_optimization.py
experiments/replay_epoch_resample/: README.md  analysis.py  run.sh
experiments/rikyu_replay_sweep/: HANDOFF.md  README.md  prep_nonqc_norm.py
experiments/rikyu_replay_sweep/analysis/: collect_warm_restart.py  compare_sweep.py  per_task_saturation.py  plot_saturation.py  plot_warm_restart.py  replay_amounts.py  replay_trajectories.py  saturation.py
experiments/rikyu_replay_sweep/configs/: full24_baseline_0p05.toml  sweep_0p10.toml  sweep_0p15.toml  sweep_0p20.toml  sweep_n100.toml  sweep_n1000.toml  sweep_n1500.toml  sweep_n200.toml  sweep_n2000.toml  sweep_n2500.toml  sweep_n500.toml
experiments/rikyu_replay_sweep/jobs/: rehearsal_full24.sbatch  replay_sweep.sbatch  warm_restart_control.sbatch
experiments/rikyu_replay_sweep/reference/: metrics_table.csv
experiments/rikyu_replay_sweep/results/: mt_0p10.csv  mt_0p15.csv  mt_0p20.csv  mt_base0p05.csv  mt_n100.csv  mt_n1000.csv  mt_n1500.csv  mt_n200.csv  mt_n2000.csv  mt_n2500.csv  mt_n500.csv
experiments/rikyu_task_scaling/: README.md  make_configs.py  orders.txt
experiments/rikyu_task_scaling/analysis/: build_trajectory_viewer.py  candidate_regularity.py  collect.py  plot_diversity.py  plot_inverse.py  plot_scaling.py
experiments/rikyu_task_scaling/configs/: ft.toml  inv.toml  pre_n1000.toml  pre_n1500.toml  ws_n1000.toml  ws_n1500.toml
experiments/rikyu_task_scaling/jobs/: ft_scaling.sbatch  inverse3.sbatch  pretrain_scaling.sbatch  scratch_baseline.sbatch  smoke.sbatch  submit_all.sh  ws_scaling.sbatch
logs/: eval_abc_intuition.py  eval_combined_abc.py  plot_abc_intuition.py  plot_combined_abc.py  plot_sweep.py  sweep_tau_schedule.py  test_max_elements_smoke.py
notebooks/: KRDF_DOS density.ipynb  KRDF_DOS density_0.2.ipynb  KRDF_DOS density_0.3.ipynb  KRDF_DOS density_0.4.ipynb  KRDF_DOS density_0.5.ipynb  KRDF_DOS density_0.6.ipynb  KRDF_DOS density_0.7.ipynb  KRDF_Magnetic susceptibility.ipynb  KRFD_Electrical resistivity.ipynb  KRFD_Power factor.ipynb  KRFD_Power factor_0.2.ipynb  KRFD_Power factor_0.3.ipynb  KRFD_Power factor_0.4.ipynb  KRFD_Power factor_0.5.ipynb  KRFD_Power factor_0.6.ipynb  KRFD_Power factor_0.7.ipynb  KRFD_Power factor_1.0.ipynb  KRFD_Seebeck coefficient.ipynb  KRFD_Seebeck coefficient_0.2.ipynb  KRFD_Seebeck coefficient_0.3.ipynb  KRFD_Seebeck coefficient_0.4.ipynb  KRFD_Seebeck coefficient_0.5.ipynb  KRFD_Seebeck coefficient_0.6.ipynb  KRFD_Seebeck coefficient_0.7.ipynb  KRFD_Seebeck coefficient_1.0.ipynb  KRFD_Thermal conductivity.ipynb  KRFD_Thermal conductivity_0.2.ipynb  KRFD_Thermal conductivity_0.3.ipynb  KRFD_Thermal conductivity_0.4.ipynb  KRFD_Thermal conductivity_0.5.ipynb  KRFD_Thermal conductivity_0.6.ipynb  KRFD_Thermal conductivity_0.7.ipynb  KRFD_ZT.ipynb  KRFD_ZT_0.2.ipynb  KRFD_ZT_0.3.ipynb  KRFD_ZT_0.4.ipynb  KRFD_ZT_0.5.ipynb  KRFD_ZT_0.6.ipynb  KRFD_ZT_0.7.ipynb  KRFD_ZT_0.8.ipynb  (+42 more)
samples/: continual_rehearsal_demo_config.toml  continual_rehearsal_demo_config_inverse_baseline.toml  continual_rehearsal_demo_config_smoke.toml  continual_rehearsal_full_config.toml  dynamic_task_suite_config.toml  dynamic_task_suite_config_free.toml  dynamic_task_suite_config_radonpy.toml  dynamic_task_suite_config_smoke.toml  example_config.yaml  finetune.toml  finetune_smoke.toml  inverse.toml  inverse_smoke.toml  predict.toml  predict_smoke.toml  pretrain.toml  pretrain_smoke.toml  progressive_clf_config.toml  progressive_clf_config_smoke.toml
samples/cli_examples/: 01_basic_run.sh  02_config_override.sh  03_scaling_law_xargs.sh
samples/configs/test_1/: fit_config.yaml  (+2 more)
samples/example_logs/: README.md
samples/fake_data/: attributes.csv  formula_features.csv
samples/generated_configs/: README.md  common_task_configs.yaml  fit_config.yaml  generated_model_config.yaml  predict_config.yaml  test_config.yaml
samples/helper_tools/: config_generator.py  fake_data_generator.py  scaling_law_analyzer.py  utils.py
scripts/: optimize_latent_demo.py
src/foundation_model/: __init__.py
(+130 files in other folders)
