[project]
name = "foundation-model"
version = "0.2.1"
description = "A multi-task learning model for predicting material properties"
readme = "README.md"
authors = [{ name = "TsumiNa", email = "liu.chang.1865@gmail.com" }]
requires-python = ">=3.11, <3.14"
dependencies = [
    "lightning[pytorch-extra]>=2.5.1.post0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy<2",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shotgun-csp",
    "tensorboard>=2.19.0",
    "torch>=2.1",
    "torch-tb-profiler>=0.4.3",
]

license = "MIT"
license-files = ["LICENSE"]
keywords = ["foundation-model", "pytorch", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]


[project.scripts]
fm-trainer = "foundation_model.scripts.train:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shotgun-csp = { git = "https://github.com/TsumiNa/shotgun_csp_next", branch = "main" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=2 --benchmark-skip --benchmark-autosave"

[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# PEP8
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
]
ignore = [
    "F841", # unused-variable
    "E741", # ambiguous-variable-name
    "W505", # doc-line-too-long
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-mock>=3.14.0",
]


[tool.ruff.lint.mccabe]
# C901
max-complexity = 10
