[project]
name = "foundation-model"
version = "0.2.1"
description = "A multi-task learning model for predicting material properties"
readme = "README.md"
authors = [{ name = "TsumiNa", email = "liu.chang.1865@gmail.com" }]
requires-python = ">=3.11, <3.14"
dependencies = [
    "joblib>=1.5.0",
    "lightning[pytorch-extra]>=2.5.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "qpsolvers>=4.7.0",
    "quadprog>=0.1.13",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.1.0, <2.9.0",
    "torch-tb-profiler>=0.4.3",
    "torchmetrics>=1.4.0",
]

license = "MIT"
license-files = ["LICENSE"]
keywords = ["foundation-model", "pytorch", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]


[project.scripts]
fm-trainer = "foundation_model.scripts.train:cli_main"
fm-pretrain-suite = "foundation_model.scripts.dynamic_task_suite:main"
fm-progressive-clf = "foundation_model.scripts.multi_task_progressive_clf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=2 --benchmark-skip --benchmark-autosave"

[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# PEP8
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
]
ignore = [
    "F841", # unused-variable
    "E741", # ambiguous-variable-name
    "W505", # doc-line-too-long
    "E501", # line-too-long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pymatgen>=2025.5.28",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.7.0",
]


[tool.ruff.lint.mccabe]
# C901
max-complexity = 10
